--- a/RHCGapp/views/index.ejs
+++ b/RHCGapp/views/index.ejs
@@ -39,7 +39,7 @@
         <h2 class="kits--title">Kits para principiantes</h2>
         <!-- slider de instrumentos acá -->
         
-        <!-- <div class="kit-slider">
+        <div class="kit-slider">
           <div class="slide">
             <article class="article-container">
               <h3 class="article--title">Guitarras</h3>
@@ -105,7 +105,7 @@
             </article>
             
           </div>
-        </div> -->
+        </div>
       
         <div class="slider-destacados">
           <div class="slide">
