--- a/RHCGapp/public/stylesheets/mobile.css
+++ b/RHCGapp/public/stylesheets/mobile.css
@@ -374,7 +374,7 @@ body{
     right: -2rem;
 }
 
-/* .kit-slider{
+.kit-slider{
     width: 100%;
     padding-left: 2rem;
     width: 100vw;
@@ -392,7 +392,7 @@ body{
     flex-shrink: 0;
     display: flex;
     padding: 2rem 0;
-} */
+}
 
 .slider-destacados {
 
